--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "apollo-server-core": "^3.6.1",
     "aws-jwt-verify": "^2.0.0",
     "aws-sdk": "^2.1058.0",
+    "dynamodb-onetable": "^2.3.1",
     "fetch-headers": "^3.0.1",
     "graphql-helix": "^1.11.0",
     "kysely": "^0.16.6",
