--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "frontend"
   ],
   "scripts": {
-    "sst:start": "NODE_OPTIONS=--enable-source-maps AWS_SDK_LOAD_CONFIG=1 sst start",
+    "sst:start": "NODE_OPTIONS=--enable-source-maps AWS_PROFILE=ironbay-dev sst start --stage=dev",
+    "sst:remove": "NODE_OPTIONS=--enable-source-maps AWS_PROFILE=ironbay-dev sst remove--stage=dev",
     "gql:gen": "graphql-codegen -c ./graphql/codegen.yml"
   },
   "devDependencies": {
